@@ -1,5 +1,8 @@
 package io.confluent.parallelconsumer;
 
+import io.confluent.csid.utils.Range;
+import lombok.Getter;
+
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.List;
@@ -10,11 +13,18 @@ import java.util.concurrent.atomic.AtomicInteger;
 import static io.confluent.csid.utils.StringUtils.msg;
 import static io.confluent.parallelconsumer.OffsetEncoding.*;
 
+/**
+ * RunLength encoder that leverages the nature of this system.
+ * <p>
+ * One such nature is that gaps between completed offsets get encoded as succeeded offsets. This doesn't matter because
+ * they don't exist and we'll neve see them (they no longer exist in the source partition).
+ */
 class RunLengthEncoder extends OffsetEncoder {
 
     private int currentRunLengthCount = 0;
     private boolean previousRunLengthState = false;
 
+    @Getter
     private final List<Integer> runLengthEncodingIntegers;
 
     private Optional<byte[]> encodedBytes = Optional.empty();
@@ -48,17 +58,17 @@ class RunLengthEncoder extends OffsetEncoder {
 
     @Override
     public void encodeIncompleteOffset(final int rangeIndex) {
-        encodeRunLength(false);
+        encodeRunLength(false, rangeIndex);
     }
 
     @Override
     public void encodeCompletedOffset(final int rangeIndex) {
-        encodeRunLength(true);
+        encodeRunLength(true, rangeIndex);
     }
 
     @Override
     public byte[] serialise() throws EncodingNotSupportedException {
-        runLengthEncodingIntegers.add(currentRunLengthCount); // add tail
+        addTail();
 
         int entryWidth = switch (version) {
             case v1 -> Short.BYTES;
@@ -66,16 +76,16 @@ class RunLengthEncoder extends OffsetEncoder {
         };
         ByteBuffer runLengthEncodedByteBuffer = ByteBuffer.allocate(runLengthEncodingIntegers.size() * entryWidth);
 
-        for (final Integer runlength : runLengthEncodingIntegers) {
+        for (final Integer runLength : runLengthEncodingIntegers) {
             switch (version) {
                 case v1 -> {
-                    final short shortCastRunlength = runlength.shortValue();
-                    if (runlength != shortCastRunlength)
-                        throw new RunlengthV1EncodingNotSupported(msg("Runlength too long for Short ({} cast to {})", runlength, shortCastRunlength));
+                    final short shortCastRunlength = runLength.shortValue();
+                    if (runLength != shortCastRunlength)
+                        throw new RunlengthV1EncodingNotSupported(msg("Runlength too long for Short ({} cast to {})", runLength, shortCastRunlength));
                     runLengthEncodedByteBuffer.putShort(shortCastRunlength);
                 }
                 case v2 -> {
-                    runLengthEncodedByteBuffer.putInt(runlength);
+                    runLengthEncodedByteBuffer.putInt(runLength);
                 }
             }
         }
@@ -83,6 +93,10 @@ class RunLengthEncoder extends OffsetEncoder {
         byte[] array = runLengthEncodedByteBuffer.array();
         encodedBytes = Optional.of(array);
         return array;
+    }
+
+    void addTail() {
+        runLengthEncodingIntegers.add(currentRunLengthCount);
     }
 
     @Override
@@ -95,15 +109,39 @@ class RunLengthEncoder extends OffsetEncoder {
         return encodedBytes.get();
     }
 
-    private void encodeRunLength(final boolean currentIsComplete) {
+    int previousRangeIndex = -1;
+
+    private void encodeRunLength(final boolean currentIsComplete, final int rangeIndex) {
         // run length
         boolean currentOffsetMatchesOurRunLengthState = previousRunLengthState == currentIsComplete;
         if (currentOffsetMatchesOurRunLengthState) {
-            currentRunLengthCount++;
+            int delta = rangeIndex - previousRangeIndex;
+            currentRunLengthCount += delta;
         } else {
             previousRunLengthState = currentIsComplete;
             runLengthEncodingIntegers.add(currentRunLengthCount);
             currentRunLengthCount = 1; // reset to 1
         }
+        previousRangeIndex = rangeIndex;
+    }
+
+    /**
+     * @return the offsets which are succeeded
+     */
+    public List<Long> calculateSucceededActualOffsets(long originalBaseOffset) {
+        List<Long> successfulOffsets = new ArrayList<>();
+        boolean succeeded = false;
+        long offsetPosition = originalBaseOffset;
+        for (final int run : runLengthEncodingIntegers) {
+            if (succeeded) {
+                for (final Integer integer : Range.range(run)) {
+                    long newGoodOffset = offsetPosition + integer;
+                    successfulOffsets.add(newGoodOffset);
+                }
+            }
+            offsetPosition += run;
+            succeeded = !succeeded;
+        }
+        return successfulOffsets;
     }
 }
